# routes/userRouter.js
@@ -8,8 +8,10 @@ import {
   userCurrent,
   userUpdate,
   countOfUsers,
+  refreshToken,
 } from '../controllers/usersControllers.js';
 import { auth } from '../middlewares/authenticate.js';
+import { refreshAuth } from '../middlewares/refreshAuth.js';
 import { upload } from '../middlewares/upload.js';
 
 const userRouter = express.Router();
@@ -19,6 +21,8 @@ userRouter.post('/register', validateBody(createUserSchema), SignUp);
 userRouter.post('/login', validateBody(loginUserSchema), SignIn);
 
 userRouter.post('/logout', auth, LogOut);
+
+userRouter.get('/refresh', refreshAuth, refreshToken);
 
 userRouter.get('/current', auth, userCurrent);
 
